removed margins from login form, was causign issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,6 @@ h1 {
 	background-image: url(https://media.giphy.com/media/Zl4qgmnvFPBeM/giphy.gif);
 	color: #ff9900;
 	font-family: "Amatic SC", cursive;
-	font-size: 600px;
 	height: 300px;
 	margin-left: 50px;
 	margin-right: 50px;
@@ -64,8 +63,6 @@ body{
 #logInForm{
 	font-family: "Amatic SC", cursive;
 	color: #ff9900;
-	margin-left: 300px;
-	margin-right: 300px;
 	font-size: 20px;
 	padding-bottom: 50px;
 	padding-top: 50px;
